<resources>
    <string name="app_name">Ar Glasses Demo</string>
    <string name="brightness">Brightness: </string>
    <string name="volume">Volume: </string>
    <string name="language">Language: </string>
    <string name="set_screen_turn_off_time">Screen turn off time: </string>
    <string name="_1_65535_sec">1~65535 sec</string>
    <string name="submit_time">Submit time</string>
    <string name="question">Question:</string>
    <string name="submit_question">Submit Question</string>
    <string name="ai_q_a"><![CDATA[AI Q&A]]></string>
    <string name="ai_reply">AI Reply:</string>
    <string name="submit_ai_reply">Submit AI Reply</string>
    <string name="show_question_dialog">Show Question Dialog</string>
    <string name="tip_you_can_simulate_the_questions_you_want_to_ask_and_the_ai_response_content_click_the_submit_button_to_display_on_the_glasses">Tip: You can simulate the questions you want to ask and the AI response content. Click the submit button to display on the glasses</string>
    <string name="title">Title:</string>
    <string name="content">Content:</string>
    <string name="software">Software:</string>
    <string name="style">Style:</string>
    <string name="notify_glasses">Notify Glasses</string>
    <string name="notification">Notification</string>
    <string name="navigation">Navigation</string>
    <string name="direction">Direction:</string>
    <string name="total_journey_time_minute">Total journey time(minute)</string>
    <string name="please_input_time_minute">Please input time</string>
    <string name="total_distance">Total distance(meter):</string>
    <string name="please_input_distance">Please input distance</string>
    <string name="remaining_distance_meter">Remaining distance(meter)</string>
    <string name="current_speed">Current speed:</string>
    <string name="please_input_speed">Please input speed</string>
    <string name="please_input">Please input</string>
    <string name="remaining_distance_of_current_road_segment">Remaining distance of current road segment:</string>
    <string name="send_command">Send Command</string>
    <string name="first_road_segment">First Road Segment</string>
    <string name="second_road_segment">Second Road Segment</string>
    <string name="please_input_0_76">Please input 0~76</string>
    <string name="open_navigation">Open navigation</string>
    <string name="close_navigation">Close navigation</string>
    <string name="open_ai">Open AI record voice</string>
    <string name="close_ai">Close AI record voice</string>
</resources>