<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ControlActivity">

    <TextView
        android:id="@+id/tvBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/seekBarBrightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:max="32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBrightness" />

    <TextView
        android:id="@+id/tvVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBrightness" />

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVolume" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarVolume" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerLanguage" />

    <TextView
        android:id="@+id/tvSetScreenTurnOffTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/set_screen_turn_off_time"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

    <EditText
        android:id="@+id/editScreenTurnOffTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_1_65535_sec"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvSetScreenTurnOffTime"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmitTurnOffTime"
        app:layout_constraintStart_toEndOf="@+id/tvSetScreenTurnOffTime"
        app:layout_constraintTop_toTopOf="@+id/tvSetScreenTurnOffTime" />

    <Button
        android:id="@+id/btnSubmitTurnOffTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_time"
        app:layout_constraintBottom_toBottomOf="@+id/editScreenTurnOffTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editScreenTurnOffTime" />

</androidx.constraintlayout.widget.ConstraintLayout>